syntax = "proto3";

package shot;

service ShotService {
    rpc Create(CreateShotDto) returns (ResponseData){}
    rpc FindAll(Empty) returns (ResponseDataFindAll) {}
    rpc FindOne(Id) returns (ResponseData) {}
    rpc FindByUserId(Id) returns (Shot){}
    rpc Update(UpdateShotDto) returns (ResponseData) {}
    rpc Remove(Id) returns (ResponseData) {}
}


// Park entity
message Shot {
    int32 id = 1;
    int32 userId = 2;
    int32 amount = 3;
    string createdAt = 4;
    string lastUpdatedAt = 5;
}

// All agruments
message Empty {}
message Id {
    int32 id = 1;
}


// ParkService arguments
message CreateShotDto {
    int32 userId = 1;
    int32 amount = 2;
}

message UpdateShotDto {
    int32 id = 1;
    int32 userId = 2;
    int32 amount = 3;
}

// Return
message ResponseData {
    string message = 1;
    int32 statusCode = 2;
    Shot data = 3;
}

message ResponseDataFindAll {
    string message = 1;
    int32 statusCode = 2;
    repeated Shot data = 3;
}